Cabal-version:  2.2
Name:           conveyor
Version:        0.1.0
Synopsis:       Conveyor Belts for Industrial-Grade Pipelines
License:        BSD-2-Clause
License-file:   LICENSE
Author:         Simon Lovell Bart
Maintainer:     Simon Lovell Bart
Category:
Build-type:     Simple

common common-options
    default-language: Haskell2010

    default-extensions:
        LambdaCase
        NoStarIsType

library
    import: common-options
    hs-source-dirs: src

    exposed-modules:
        Conveyor
        Conveyor.Core
        Conveyor.Codensity

    ghc-options: -Wall -Wcompat
    CPP-Options: -DCABAL

    build-depends:
        base,
        mtl,
        transformers
