Cabal-version:  2.2
Name:           conveyor
Version:        0.1.2
Synopsis:       Conveyor Belts for Industrial-Grade Pipelines
License:        BSD-3-Clause
License-file:   LICENSE
Author:         Simon Lovell Bart
Maintainer:     exclusiveandgate@gmail.com
Category:       Control, Conveyors
Build-type:     Simple
Source-Repository head
    Type: git
    Location: https://github.com/exclusive-and/conveyor

common common-options
    default-language: Haskell2010

    default-extensions:
        FlexibleInstances
        LambdaCase
        MultiParamTypeClasses
        NoStarIsType

library
    import: common-options
    hs-source-dirs: src

    exposed-modules:
        Conveyor
        Conveyor.Core
        Conveyor.Codensity

    ghc-options: -Wall -Wcompat
    CPP-Options: -DCABAL

    other-extensions:
        RankNTypes
        UndecidableInstances

    build-depends:
        base            >= 4.11     && < 5,
        mtl             >= 2.1.2    && < 3,
        transformers    >= 0.5.2.0  && < 0.7
